transactions: pagination, sort, search
