# src/routes/transaction.router.ts
@@ -5,7 +5,14 @@ const router = express.Router();
 
 router.get('/', async(req, res) => {
   const ctrl = new TransCtrl();
-  const transactions = await ctrl.getTransactions();
+
+  const page: string = (req.query.page || 1).toString();
+  const rowsPerPage = (req.query.rowsPerPage || 10).toString();
+  const orderBy = (req.query.orderBy || 'date').toString();
+  const descending = (req.query.descending || 'true').toString();
+  const filter = (req.query.filter || '').toString();
+
+  const transactions = await ctrl.getTransactions(page, rowsPerPage, orderBy, descending, filter);
   return res.json(transactions);
 });
 
